<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dots</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>

    <string name="hello_world">Hello world!</string>

    <!-- Menu -->
    <string name="buttonClassic">Classic</string>
    <string name="buttonMoves">Moves</string>
    <string name="highScore">High Scores</string>
    <string name="settings">Settings</string>
    <string name="title_activity_preference">PreferenceActivity</string>

    <!-- Game -->
    <string name="remainingMoves">%1$d</string>
    <string name="remainingSeconds">%1$d</string>
    <string name="score">%1$d</string>
    <string name="add_score">%1$d</string>
    <string name="best_score">%1$d</string>
    <string name="title_activity_game_finished">GameFinished</string>

    <!-- Game Finished -->
    <string name="game_finished_scoreText">Score</string>
    <string name="game_finished_hishScoreText">HighScore</string>
    <string name="replay">Replay</string>
    <string name="menu">Menu</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="new_highscore">New HighScore !</string>

    <!-- High Scores -->
    <string name="highScoreReset">Reset</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="no_high_score">No High Score</string>
    <string name="mode">Mode</string>
    <string name="difficulty">Difficulty</string>

</resources>