<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/remainingMoves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remainingMoves"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gameText"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/gameText"/>

    </LinearLayout>

    <com.icelandic_courses.elie.myfirstapp.view.GameView
        android:id="@+id/gameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"/>

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_score"
        android:layout_below="@+id/gameView"
        android:gravity="center"
        style="@style/gameText"/>

</RelativeLayout>
