<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.icelandic_courses.elie.myfirstapp.view.GameFinishedActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/newHighScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/newHighScoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_highscore"
            android:gravity="center"
            android:textSize="@dimen/game_finished_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/newHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/game_finished_score_size"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/vertical_space_between_part"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="@string/game_finished_scoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/game_finished_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/game_finished_score_size"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_space_between_part"
                android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:text="@string/game_finished_hishScoreText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/game_finished_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/highScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/game_finished_score_size"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/vertical_space_between_part"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_space_between_part">

        <Button
            android:id="@+id/replayButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="replay"
            android:text="@string/replay"
            style="@style/highScoreButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="menu"
            android:text="@string/menu"
            style="@style/settingsButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/horizontal_space_between_menu_buttons"/>

    </LinearLayout>

</LinearLayout>
