<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/remainingSecondsIcon"
                android:layout_width="@dimen/game_text_size"
                android:layout_height="@dimen/game_text_size"
                android:src="@drawable/time"
                android:layout_marginRight="@dimen/game_space_between_icon_and_text"/>

            <TextView
                android:id="@+id/remainingSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remainingMoves"
                android:gravity="center"
                style="@style/gameText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/additionalScoreIcon"
                android:layout_width="@dimen/game_text_size"
                android:layout_height="@dimen/game_text_size"
                android:src="@drawable/score_add"
                android:layout_marginRight="@dimen/game_space_between_icon_and_text"/>

            <TextView
                android:id="@+id/additionalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_score"
                android:gravity="center"
                style="@style/gameText"/>

        </LinearLayout>

    </LinearLayout>

    <com.icelandic_courses.elie.myfirstapp.view.GameView
        android:id="@+id/gameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/gameView">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/scoreIcon"
                android:layout_width="@dimen/game_text_size"
                android:layout_height="@dimen/game_text_size"
                android:src="@drawable/score"
                android:layout_marginRight="@dimen/game_space_between_icon_and_text"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:gravity="center"
                style="@style/gameText"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/highScoreIcon"
                android:layout_width="@dimen/game_text_size"
                android:layout_height="@dimen/game_text_size"
                android:src="@drawable/highscore"
                android:layout_marginRight="@dimen/game_space_between_icon_and_text"/>

            <TextView
                android:id="@+id/bestScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score"
                android:gravity="center"
                style="@style/gameText"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
